--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 version: "3.8"
 
 services:
-  database:
-    container_name: tech-certification-system-pg
-    image: postgres
+  postgres:
+    image: bitnami/postgresql:latest
     ports:
-      - 5434:5432
+      - '5434:5432'
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=tech_certification_system
     volumes:
-      - ./db-data:/var/lib/postgresql/data
+      - tech-certification-system-pg-data:/bitnami/postgresql
+
+volumes:
+  tech-certification-system-pg-data:
