simplify project name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
-      - POSTGRES_DB=tech_certification_system
+      - POSTGRES_DB=tech_certification
     volumes:
-      - tech-certification-system-pg-data:/bitnami/postgresql
+      - pg-data:/bitnami/postgresql
 
 volumes:
-  tech-certification-system-pg-data:
+  pg-data:
