--- a/pom.xml
+++ b/pom.xml
@@ -9,26 +9,23 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sakurai</groupId>
-	<artifactId>tech-certification</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>tech-certification</name>
-	<description>Application for a Tech Certification System</description>
+	<artifactId>tech-certification-api</artifactId>
+	<version>1.0.0</version>
+	<name>tech-certification-api</name>
+	<description>API for a Tech Certification Service</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.7.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
