--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8085
-spring.datasource.url=jdbc:postgresql://localhost:5434/tech_certification
+spring.datasource.url=jdbc:postgresql://localhost:5434/tech_certification_api
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
