--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: "3.8"
 
 services:
   postgres:
-    image: postgres
+    image: bitnami/postgresql:latest
     ports:
-      - '5432:5432'
+      - 5432:5432
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=app
       - POSTGRES_DB=tech_certification_api
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - pg-data:/bitnami/postgresql
 
 volumes:
   pg-data:
