--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8085
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/tech_certification_api
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=app
+spring.datasource.password=app
+
 spring.jpa.hibernate.ddl-auto=update
